added a module tiny-coverage to aggregate coverage report of individual modules